issue #8 fix
home page top of image not cut off anymore.

--- a/StateTemplateV5Beta/Content/StateTemplate/css/random.css
+++ b/StateTemplateV5Beta/Content/StateTemplate/css/random.css
@@ -1,5 +1,8 @@
-﻿/*css form utility header*/
-.utility-links > .settingsLink {
+﻿.header-large-banner {
+    background-position: top;
+}
+    /*css form utility header*/
+    .utility-links > .settingsLink {
     display: inline-block;
     padding: 0 8px;
 }
